--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@react-navigation/stack": "^7.6.16",
+    "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-status-bar": "~3.0.8",
