--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "latest",
     "react": "19.1.0",
