--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.8",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "^7.1.28",
@@ -20,12 +21,14 @@
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-checkbox": "~5.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
+    "react-native-currency-input": "^1.1.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
