--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "latest",
+    "qs": "^6.14.1",
     "react": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-native": "0.81.5",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/qs": "^6.14.0",
     "@types/react": "~19.1.10",
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
